@@ -40,6 +40,8 @@ Ver.4.4 (in development)
   IMLibElement.setValueToIMNode() if the element of the parameter is a textarea element and the value is false.
 - [BUG FIX] Fix not to show the dialog message when the value of the Local Context is updated.
 - [BUG FIX] Avoid outputting duplicated alert messages of the validation when changing the value.
+- [BUG FIX] Enable outputting an alert message of the validation correctly when the validation rules of the field are 
+  multiple on the post only mode.
 - [WARNING] The JavaScript code editor "codemirror" isn't temporally supported for the updated version doesn't work fine.
 
 Ver.4.3 (2014/4/7)
